@@ -5,8 +5,16 @@ PyDO driver for MySQL, using the MySQLdb driver.
 
 from PyDO.dbi import DBIBase, ConnectionPool
 from PyDO.exceptions import PyDOError
+from PyDO.operators import BindingConverter
+from PyDO.dbtypes import DATE, TIMESTAMP, BINARY, INTERVAL
 
 import MySQLdb
+
+class MysqlConverter(BindingConverter):
+    converters={DATE: lambda x: x.value,
+                TIMESTAMP: lambda x: x.value,
+                BINARY: lambda x: x.value,
+                INTERVAL: lambda x: x.value}
 
 class MysqlDBI(DBIBase):
     auto_increment=True
@@ -20,3 +28,6 @@ class MysqlDBI(DBIBase):
             return self.conn.insert_id()
         except AttributeError:
             raise PyDOError, "could not get insert id!"
+
+    def getConverter(self):
+        return MysqlConverter(self.paramstyle)
